--- a/behavia-intovert-extovrt.ipynb
+++ b/behavia-intovert-extovrt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "796e9a4e",
    "metadata": {},
    "outputs": [
@@ -25,27 +25,27 @@
       "        File \"E:\\Anaconda\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 149, in prepare_metadata_for_build_wheel\n",
       "          return hook(metadata_directory, config_settings)\n",
       "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-ozz480xp\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 374, in prepare_metadata_for_build_wheel\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-q18d6lkn\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 374, in prepare_metadata_for_build_wheel\n",
       "          self.run_setup()\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-ozz480xp\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 512, in run_setup\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-q18d6lkn\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 512, in run_setup\n",
       "          super().run_setup(setup_script=setup_script)\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-ozz480xp\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 317, in run_setup\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-q18d6lkn\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 317, in run_setup\n",
       "          exec(code, locals())\n",
       "        File \"<string>\", line 669, in <module>\n",
       "        File \"<string>\", line 663, in setup_package\n",
       "        File \"<string>\", line 597, in configure_extension_modules\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-install-swcf3aez\\scikit-learn_cd89d04d0cdf4ede853d55ad67104fde\\sklearn\\_build_utils\\__init__.py\", line 47, in cythonize_extensions\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-install-vq8wzwzi\\scikit-learn_c0529b8c41ef4ab9b648c23a11fe2df0\\sklearn\\_build_utils\\__init__.py\", line 47, in cythonize_extensions\n",
       "          basic_check_build()\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-install-swcf3aez\\scikit-learn_cd89d04d0cdf4ede853d55ad67104fde\\sklearn\\_build_utils\\pre_build_helpers.py\", line 82, in basic_check_build\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-install-vq8wzwzi\\scikit-learn_c0529b8c41ef4ab9b648c23a11fe2df0\\sklearn\\_build_utils\\pre_build_helpers.py\", line 82, in basic_check_build\n",
       "          compile_test_program(code)\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-install-swcf3aez\\scikit-learn_cd89d04d0cdf4ede853d55ad67104fde\\sklearn\\_build_utils\\pre_build_helpers.py\", line 38, in compile_test_program\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-install-vq8wzwzi\\scikit-learn_c0529b8c41ef4ab9b648c23a11fe2df0\\sklearn\\_build_utils\\pre_build_helpers.py\", line 38, in compile_test_program\n",
       "          ccompiler.compile(\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-ozz480xp\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\compilers\\C\\msvc.py\", line 384, in compile\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-q18d6lkn\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\compilers\\C\\msvc.py\", line 384, in compile\n",
       "          self.initialize()\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-ozz480xp\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\compilers\\C\\msvc.py\", line 294, in initialize\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-q18d6lkn\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\compilers\\C\\msvc.py\", line 294, in initialize\n",
       "          vc_env = _get_vc_env(plat_spec)\n",
       "                   ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-ozz480xp\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\compilers\\C\\msvc.py\", line 155, in _get_vc_env\n",
+      "        File \"C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-build-env-q18d6lkn\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\compilers\\C\\msvc.py\", line 155, in _get_vc_env\n",
       "          raise DistutilsPlatformError(\n",
       "      distutils.errors.DistutilsPlatformError: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
       "      [end of output]\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "6370793f",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "b10bd8b6",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "f3c3b7cf",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "7275b85e",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "969c69fc",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "e9c38ac2",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "9e118297",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "c4a746ed",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "debfac08",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "df147b03",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "52207016",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "86dd92e6",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "dc96cce0",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "e07f1047",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "1a89ea90",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "9de08dc0",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "30388364",
    "metadata": {},
    "outputs": [
